--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <section class="hero">
+    <h2>Registration Form</h2>
     <div class="overlay">
       <div class="form-container">
         <h1>Register Now</h1>
@@ -18,7 +19,6 @@
           <input type="password" placeholder="Confirm Password" required />
           <button type="submit">Sign Up</button>
         </form>
-        <p class="login-link">Already have an account? <a href="#">Login</a></p>
       </div>
     </div>
   </section>
